specs/istio/bookinfo-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  gateways:
  - bookinfo-gateway  # <1>
  hosts:
  - "bookinfo.192.168.59.20.nip.io"  # <2>
  http:  # <3>
  - match:  # <4>
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:  # <5>
    - destination:
        host: productpage
        port:
          number: 9080
