specs/istio/dashboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: istio  # <1>
spec:
  rules:
  - host: dashboard.192.168.59.20.nip.io  # <2>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard  # <3>
            port:
              number: 80  # <4>
